--- a/package.json
+++ b/package.json
@@ -6,8 +6,24 @@
     "apps/backend/*",
     "packages/*"
   ],
-  "scripts": {},
+  "scripts": {
+    "dev:website": "nx run website:dev",
+    "dev:blog": "nx run blog:dev"
+  },
   "devDependencies": {
-    "nx": "20.0.3"
+    "@nx/eslint": "20.0.3",
+    "@nx/next": "20.0.3",
+    "@nx/vite": "20.0.3",
+    "@nx/web": "20.0.3",
+    "@vitest/ui": "^1.3.1",
+    "eslint": "~8.57.0",
+    "nx": "20.0.3",
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1"
+  },
+  "dependencies": {
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
