--- a/apps/backend/blog/package.json
+++ b/apps/backend/blog/package.json
@@ -9,6 +9,7 @@
     "@elysiajs/cors": "^1.1.1",
     "@typegoose/typegoose": "^12.8.0",
     "elysia": "latest",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2"
   },
   "devDependencies": {
