add migrate mongo

--- a/apps/backend/blog/package.json
+++ b/apps/backend/blog/package.json
@@ -10,6 +10,7 @@
     "@typegoose/typegoose": "^12.8.0",
     "elysia": "latest",
     "jsonwebtoken": "^9.0.2",
+    "migrate-mongo": "^11.0.0",
     "mongoose": "^8.7.2"
   },
   "devDependencies": {
