add users seed script for blog service

--- a/apps/backend/blog/.env.template
+++ b/apps/backend/blog/.env.template
@@ -17,3 +17,10 @@ BLOG_PORTAL_URL=
 
 # Blog (Backend,Production only)
 BLOG_URL=
+
+# Users (Local only)
+USERNAME_1=
+PASSWORD_1
+
+USERNAME_2=
+PASSWORD_2=
