--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/*"
   ],
   "scripts": {
+    "dev:blog-portal": "nx run-many -t dev -p apps/backend/blog apps/frontend/blog-portal --parallel=2",
     "dev:backend": "nx run-many --target=dev --projects=apps/backend/* --parallel=10",
     "dev:frontend": "nx run-many --target=dev --projects=apps/frontend/* --parallel=10",
     "dev": "nx run-many --target=dev --all --parallel=10"
