--- a/apps/frontend/blog-portal/package.json
+++ b/apps/frontend/blog-portal/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-router": "^1.74.4",
     "@tanstack/router-devtools": "^1.74.4",
     "class-variance-authority": "^0.7.0",
