--- a/apps/frontend/blog-portal/package.json
+++ b/apps/frontend/blog-portal/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-router": "^1.74.4",
     "@tanstack/router-devtools": "^1.74.4",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
