--- a/apps/frontend/blog-portal/package.json
+++ b/apps/frontend/blog-portal/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-router": "^1.74.4",
+    "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-devtools": "^1.74.4",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
