move common types to packages

--- a/apps/frontend/blog-portal/tsconfig.json
+++ b/apps/frontend/blog-portal/tsconfig.json
@@ -1,16 +1,16 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+    "compilerOptions": {
+        "strict": true,
+        "esModuleInterop": true,
+        "jsx": "react-jsx",
+        "target": "ESNext",
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
+        "baseUrl": ".",
+        "paths": {
+            "@/lib/types/*": ["../../../packages/types/lib/*"],
+            "@/lib/utils/*": ["../../../packages/utils/lib/*"],
+            "@/*": ["./src/*"]
+        }
     }
-  }
 }
