--- a/apps/frontend/blog-portal/tsconfig.json
+++ b/apps/frontend/blog-portal/tsconfig.json
@@ -11,6 +11,7 @@
             "@/packages/types/*": ["../../../packages/types/lib/*"],
             "@/packages/utils/*": ["../../../packages/utils/lib/*"],
             "@/*": ["./src/*"]
-        }
+        },
+        "experimentalDecorators": true
     }
 }
