--- a/apps/frontend/blog-portal/package.json
+++ b/apps/frontend/blog-portal/package.json
@@ -23,9 +23,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-router": "^1.74.4",
     "@tanstack/react-table": "^8.20.5",
