--- a/apps/frontend/blog-portal/package.json
+++ b/apps/frontend/blog-portal/package.json
@@ -36,8 +36,10 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-markdown": "^9.0.1",
