--- a/apps/frontend/blog-portal/package.json
+++ b/apps/frontend/blog-portal/package.json
@@ -43,6 +43,7 @@
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.1",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.4",
