--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,5 +7,9 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "js-logger": "^1.6.1"
   }
 }
