--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:blog-portal": "nx run-many -t dev -p apps/backend/blog apps/frontend/blog-portal --parallel=2",
     "dev:backend": "nx run-many --target=dev --projects=apps/backend/* --parallel=10",
     "dev:frontend": "nx run-many --target=dev --projects=apps/frontend/* --parallel=10",
-    "dev": "nx run-many --target=dev --all --parallel=10"
+    "dev": "nx run-many --target=dev --all --parallel=10",
+    "format": "prettier --write \"**/*.{ts,tsx,css,html}\""
   },
   "devDependencies": {
     "@nx/eslint": "20.0.3",
@@ -20,6 +21,7 @@
     "@vitest/ui": "^1.3.1",
     "eslint": "~8.57.0",
     "nx": "20.0.3",
+    "prettier": "^3.3.3",
     "vite": "^5.0.0",
     "vitest": "^1.3.1"
   },
