update blog service dockerfile

--- a/apps/backend/blog/Dockerfile
+++ b/apps/backend/blog/Dockerfile
@@ -1,5 +1,7 @@
 FROM --platform=linux/amd64 oven/bun:latest
 
+RUN apt-get update && apt-get install -y curl
+
 WORKDIR /beingsofhabit
 
 RUN mkdir -p ./apps/backend/blog ./packages
@@ -9,6 +11,8 @@ COPY ./apps/backend/blog/ ./apps/backend/blog/
 COPY ./packages/ ./packages/
 
 WORKDIR /beingsofhabit/apps/backend/blog
+
+RUN curl -o global-bundle.pem https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem
 
 RUN bun install
 
