--- a/apps/backend/blog/.env.template
+++ b/apps/backend/blog/.env.template
@@ -9,6 +9,14 @@ JWT_SECRET=
 MONGODB_URI=
 MONGODB_DB_NAME=
 
+# S3
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+BUCKET_ENDPOINT=
+BUCKET_NAME=
+URL_EXPIRY_IN_SECONDS=
+
 # Website (Frontend, Production only)
 WEBSITE_URL=
 
