--- a/apps/backend/purchase/tsconfig.json
+++ b/apps/backend/purchase/tsconfig.json
@@ -22,6 +22,13 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+
+    "baseUrl": ".",
+      "paths": {
+        "@/packages/types/*": ["../../../packages/types/lib/*"],
+        "@/packages/utils/*": ["../../../packages/utils/lib/*"],
+        "@/packages/common/*": ["../../../packages/common/lib/*"],
+    }, 
   }
 }
