--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -22,13 +22,6 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false,
-
-    "baseUrl": ".",
-      "paths": {
-        "@/packages/types/*": ["../../../packages/types/lib/*"],
-        "@/packages/utils/*": ["../../../packages/utils/lib/*"],
-        "@/packages/common/*": ["../../../packages/common/lib/*"],
-    }, 
+    "noPropertyAccessFromIndexSignature": false
   }
 }
