--- a/apps/backend/blog/package.json
+++ b/apps/backend/blog/package.json
@@ -2,7 +2,7 @@
   "name": "blog",
   "version": "1.0.50",
   "scripts": {
-    "start": "bun run src/index.ts",
+    "start": "bun run migrate && bun run src/index.ts",
     "dev": "bun run --watch src/index.ts",
     "create-migration": "migrate-mongo create",
     "migrate": "migrate-mongo up",
