--- a/apps/backend/blog/package.json
+++ b/apps/backend/blog/package.json
@@ -6,7 +6,8 @@
     "dev": "bun run --watch src/index.ts",
     "create-migration": "migrate-mongo create",
     "migrate": "migrate-mongo up",
-    "rollback": "migrate-mongo down"
+    "rollback": "migrate-mongo down",
+    "build-and-push": "chmod +x ./build-and-push.sh && ./build-and-push.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.685.0",
