--- a/.github/workflows/push-backend.yml
+++ b/.github/workflows/push-backend.yml
@@ -6,7 +6,7 @@ on:
             - feature/github-actions
         paths:
             - "apps/backend/blog/**"
-    workflow_run: 
+    workflow_run:
         workflows: ["Setup core infrastructure"]
         types:
             - completed
@@ -21,11 +21,10 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v4
-              with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-region: ap-southeast-1
+              run: |
+                  aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws configure set default.region ap-southeast-1
 
             - name: Log in to ECR
               id: login-ecr
