--- a/.github/workflows/setup-core-infra.yml
+++ b/.github/workflows/setup-core-infra.yml
@@ -18,11 +18,10 @@ jobs:
               uses: hashicorp/setup-terraform@v3
 
             - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v4
-              with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-region: ap-southeast-1
+              run: |
+                  aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws configure set default.region ap-southeast-1
 
             - name: Terraform Init
               run: terraform init
