update non core workflows

--- a/.github/workflows/push-backend.yml
+++ b/.github/workflows/push-backend.yml
@@ -6,6 +6,8 @@ on:
             - "Setup core infrastructure"
         types:
             - completed
+        branches: 
+            - feature/github-actions
 
 jobs:
     build-and-push:
