--- a/.github/workflows/setup-additional-infra.yml
+++ b/.github/workflows/setup-additional-infra.yml
@@ -7,6 +7,8 @@ on:
             - "Build and push frontend"
         types:
             - completed
+        branches: 
+            - feature/github-actions
 
 jobs:
     terraform:
