--- a/.github/workflows/push-frontend.yml
+++ b/.github/workflows/push-frontend.yml
@@ -2,15 +2,14 @@ name: Push frontend
 
 on:
     workflow_run:
-        workflows:
-            - "Setup core infrastructure"
-        types:
-            - completed
-        branches: 
+        workflows: [Setup core infrastructure]
+        types: [completed]
+        branches:
             - feature/github-actions
 
 jobs:
     build-and-push:
+        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         name: Build and push frontend
         runs-on: ubuntu-latest
 
