update blog workflow run conditions

--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -4,6 +4,11 @@ on:
     push:
         branches:
             - main
+        paths: 
+            - 'apps/backend/blog/**'
+            - 'apps/frontend/blog-portal/**'
+            - 'infra/**'
+            - 'packages/**'
 
 env:
     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
