rename blog portal to admin portal

--- a/apps/backend/blog/.env.template
+++ b/apps/backend/blog/.env.template
@@ -20,8 +20,8 @@ URL_EXPIRY_IN_SECONDS=
 # Website (Frontend, Production only)
 WEBSITE_URL=
 
-# Blog Portal (Frontend, Production only)
-BLOG_PORTAL_URL=
+# Admin Portal (Frontend, Production only)
+ADMIN_PORTAL_URL=
 
 # Blog (Backend,Production only)
 BLOG_URL=
