--- a/apps/backend/product/package.json
+++ b/apps/backend/product/package.json
@@ -1,19 +1,15 @@
 {
   "name": "product",
-  "module": "index.ts",
-  "type": "module",
+  "version": "1.0.50",
   "scripts": {
-    "start": "bun run src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
   },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/express": "^5.0.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
   "dependencies": {
-    "express": "^4.21.1"
-  }
+    "elysia": "latest"
+  },
+  "devDependencies": {
+    "bun-types": "latest"
+  },
+  "module": "src/index.js"
 }
