--- a/apps/backend/blog/tsconfig.json
+++ b/apps/backend/blog/tsconfig.json
@@ -29,9 +29,15 @@
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": ".",
-      "paths": {
+    "paths": {
+        "@/packages/types": ["../../../packages/types/lib/index.ts"],
         "@/packages/types/*": ["../../../packages/types/lib/*"],
+
+        "@/packages/utils": ["../../../packages/utils/lib/index.ts"],
         "@/packages/utils/*": ["../../../packages/utils/lib/*"],
+
+        "@/packages/plugins": ["../../../packages/plugins/lib/index.ts"],
+        "@/packages/plugins/*": ["../../../packages/plugins/lib/*"],
     },                                   /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
