--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "dev:backend:blog": "nx dev blog",
-    "dev:blog-portal": "nx run-many -t dev -p apps/backend/blog apps/frontend/admin-portal --parallel=2",
+    "dev:admin-portal": "nx run-many -t dev -p apps/backend/blog apps/backend/product apps/frontend/admin-portal --parallel=3",
     "dev:backend": "nx run-many --target=dev --projects=apps/backend/* --parallel=10",
     "dev:frontend": "nx run-many --target=dev --projects=apps/frontend/* --parallel=10",
     "dev": "nx run-many --target=dev --all --parallel=10"
