--- a/apps/backend/product/package.json
+++ b/apps/backend/product/package.json
@@ -9,7 +9,10 @@
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "pg": "^8.13.1",
+    "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6"
   },
   "module": "src/index.js"
 }
